--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,19 @@
-title: Hamilton
-description: A minimal and beautiful Jekyll theme best for writing and note-taking.
-author: Shangzhi Huang
+title: Jinu's Blog
+description: 딥러닝 논문 리뷰 밑 구현 블로그
+author: Jinu
 avatar: /logo.png
-email: ngzhio@gmail.com
+email: ahn13400@gmail.com
 
 plugins:
   - jekyll-seo-tag
   - jekyll-feed
   - jekyll-sitemap
   - jekyll-paginate
+  - jekyll-remote-theme
 
 paginate: 10
+
+remote_theme: ngzhio/jekyll-theme-hamilton
 
 # Uncomment the below line and set the tracking ID for enabling Google Analytics
 # 
@@ -29,15 +32,15 @@ exclude:
 
 # Jekyll SEO Tag (Optional)
 # =========================
-twitter:
-  username: ngzhio
-  card: summary
-logo: logo.png
-social:
-  name: Shangzhi Huang
-  links:
-    - https://twitter.com/ngzhio
-    - https://www.facebook.com/ngzhio
-    - https://github.com/ngzhio
+#twitter:
+#  username: ngzhio
+#  card: summary
+#logo: logo.png
+#social:
+#  name: Shangzhi Huang
+#  links:
+#    - https://twitter.com/ngzhio
+#    - https://www.facebook.com/ngzhio
+#    - https://github.com/ngzhio
 google_site_verification: u4WXQl0Eu66rsQo2kRdCNx
 lang: en
