--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Jinu's Blog
-description: 딥러닝 논문 리뷰 밑 구현 블로그
+description: 딥러닝 논문 리뷰 블로그
 author: Jinu
-avatar: /logo.png
+avatar: /guitar.jpeg
 email: ahn13400@gmail.com
 
 plugins:
